--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html  lang="en">
 	<head>
 		<meta charset="utf-8" >
-		<title>Cody - BreathforBill</title>
+		<title>Bill Anthony - BreathforBill</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="i/favicon-default.png">
 		<!-- AOS 3.0.0-beta.6 plugin CSS (Animations) -->
